--- a/style.css
+++ b/style.css
@@ -120,13 +120,13 @@ body {
     max-width: 300px;
     position: relative;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    height: 53vh;
-    width: 65vw;
+    height: 35vh;
+    width: 57vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    line-height: 35px;
+    line-height: 37px;
 }
 
 .close {
@@ -156,7 +156,7 @@ body {
 
 #titlePrize {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .icon-copy {
@@ -167,18 +167,20 @@ body {
 .icon-copy:after {
     content: '';
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-image: url('img/icon-copy.svg');
+    width: 36px;
+    height: 36px;
+    background-image: url('./img/Copy2.svg');
     background-size: 20px 20px;
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
+    position: absolute;
+    right: 10%;
+    bottom: 23%;
 }
 
 .flex {
     display: flex;
-    position: relative;
 }
 
 .items-center {
@@ -195,12 +197,22 @@ body {
 
 .copy-notify {
     position: absolute;
-    top: 86%;
+    bottom: 3%;
     background-color: #333;
     color: white;
-    padding: 5px 4px;
     border-radius: 5px;
-    font-size: 11px;
+    font-size: 10px;
     display: none;
-    width: 111px;
+    width: 100px;
+}
+
+.blue {
+    background-color: #ccecfb;
+    width: 108px;
+    height: 108px;
+    border-radius: 10px;
+    font-size: 23px;
+    line-height: 34px;
+    padding-left: 11px;
+    font-weight: 600;
 }
