--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@ body {
 }
 
 .container {
-    width: 372px;
+    max-width: 966px;
     padding: 20px 10px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .calendar {
@@ -58,8 +59,8 @@ body {
     background-size: cover;
     background-position: center;
     position: relative;
-    opacity: 1; /* Убираем прозрачность */
-    cursor: pointer; /* Делаем все карточки кликабельными */
+    opacity: 1;
+    cursor: pointer;
 }
 
 .first {
@@ -100,7 +101,7 @@ body {
 }
 
 .modal {
-    display: none; /* Скрыто по умолчанию */
+    display: none;
     position: fixed;
     z-index: 100;
     left: 0;
@@ -215,4 +216,89 @@ body {
     line-height: 34px;
     padding-left: 11px;
     font-weight: 600;
+}
+
+.day.disabled {
+    opacity: 0.4;
+    cursor: not-allowed;
+    pointer-events: none;
+    position: relative;
+}
+
+.day.disabled::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+.faq-container {
+    width: calc(100% - 20px);
+    max-width: 946px;
+    margin-top: 40px;
+    padding: 20px;
+    background-color: #fffae6;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.faq-item {
+    border-bottom: 1px solid #ddd;
+    padding: 10px 0;
+}
+
+.faq-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.faq-arrow {
+    transition: transform 1.1s ease-in-out;
+    display: inline-block;
+    font-size: 18px;
+}
+
+.faq-answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+    font-size: 16px;
+    line-height: 1.4;
+    padding-top: 0;
+}
+
+.faq-item.active .faq-answer {
+    max-height: 3000px;
+    padding-top: 10px;
+    line-height: 27px;
+}
+
+.faq-item.active .faq-arrow {
+    transform: rotate(180deg);
+}
+
+.faq-question,
+.faq-answer {
+    font-size: 16px;
+}
+
+@media (max-width: 936px) {
+    .calendar {
+        justify-content: center;
+    }
+    .faq-question,
+    .faq-answer {
+        font-size: 13px;
+    }
+    .faq-container {
+        margin-top: 10px;
+    }
 }
