--- a/style.css
+++ b/style.css
@@ -1,304 +1,418 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-size: cover;
-    background-position: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-size: cover;
+  background-position: center;
+}
+
+@font-face {
+  font-family: "Dorama";
+  src: url("./img/Dorama.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
-    margin: 0;
-    background-image: url('./img/bg.png');
-    font-family: sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+  margin: 0;
+  background-image: url("./img/bg.svg");
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-repeat: no-repeat;
 }
 
 .container {
-    max-width: 966px;
-    padding: 20px 10px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  max-width: 966px;
+  padding: 20px 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  margin-bottom: 16px;
+}
+
+.title {
+  color: #fff;
+  text-align: center;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #000;
+  font-family: "Dorama";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  margin-bottom: 40px;
 }
 
 .calendar {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 372px; /* Фиксированная ширина: 3 карточки по 114px + 2 промежутка по 10px */
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.first-row {
+  justify-content: flex-start;
+}
+
+.second-row,
+.third-row,
+.fourth-row,
+.fifth-row {
+  justify-content: space-between;
+}
+
+.days-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  width: 100%;
+  max-width: 478px; /* 4 карточки по 114px + 3 промежутка по 10px */
 }
 
 .banner {
-    background-image: url('./img/pickGift.svg');
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    height: 108px;
-    width: calc(2 * 108px + 10px);
-    border-radius: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    text-align: center;
+  background-image: url("./img/pickGift.svg");
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  height: 114px;
+  width: 243px; /* 2 карточки по 114px + 1 промежуток 10px */
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  text-align: center;
+  flex-shrink: 0;
 }
 
 .day {
-    width: 108px;
-    height: 108px;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    opacity: 1;
-    cursor: pointer;
+  width: 114px;
+  height: 114px;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  cursor: pointer;
+  border-radius: 4px;
+  overflow: hidden;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.25) 0%,
+    rgba(255, 255, 255, 0.15) 50%,
+    rgba(255, 255, 255, 0.05) 100%
+  );
+
+  /* Эквивалент параметров Figma */
+  backdrop-filter: blur(4px); /* frost: 4 */
+  -webkit-backdrop-filter: blur(4px);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 
+      /* light -45 degrees, 80% opacity */ inset -1px 1px 1px rgba(255, 255, 255, 0.8),
+    inset 1px -1px 1px rgba(0, 0, 0, 0.1),
+    /* depth effect */ 0 2px 10px rgba(0, 0, 0, 0.15);
 }
+
+.day.ultra-transparent {
+  background: rgba(255, 255, 255, 0.02);
+  backdrop-filter: blur(35px);
+  -webkit-backdrop-filter: blur(35px);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05),
+    inset 0 1px 0 rgba(255, 255, 255, 0.05);
+}
+
+.day::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: inherit;
+  border-radius: 4px;
+  z-index: -1;
+}
+
+/* .day::after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    background: linear-gradient(
+      135deg,
+      rgba(255, 255, 255, 0.2) 0%,
+      rgba(255, 255, 255, 0.05) 100%
+    );
+    border-radius: 3px;
+    z-index: 2;
+  } */
 
 .first {
-    background-image: url('./img/1.svg');
+  background-image: url("./img/1.svg");
 }
 .second {
-    background-image: url('./img/2.svg');
+  background-image: url("./img/2.svg");
 }
 .third {
-    background-image: url('./img/3.svg');
+  background-image: url("./img/3.svg");
 }
 .fourth {
-    background-image: url('./img/4.svg');
+  background-image: url("./img/4.svg");
 }
 .fifth {
-    background-image: url('./img/5.svg');
+  background-image: url("./img/5.svg");
 }
 .sixth {
-    background-image: url('./img/6.svg');
+  background-image: url("./img/6.svg");
 }
 .seventh {
-    background-image: url('./img/7.svg');
+  background-image: url("./img/7.svg");
 }
 .eighth {
-    background-image: url('./img/8.svg');
+  background-image: url("./img/8.svg");
 }
 .ninth {
-    background-image: url('./img/9.svg');
+  background-image: url("./img/9.svg");
 }
 .tenth {
-    background-image: url('./img/10.svg');
+  background-image: url("./img/10.svg");
 }
 .eleventh {
-    background-image: url('./img/11.svg');
+  background-image: url("./img/11.svg");
 }
 .twelfth {
-    background-image: url('./img/12.svg');
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: white;
-    padding: 20px 30px;
-    border-radius: 12px;
-    text-align: center;
-    max-width: 300px;
-    position: relative;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    height: 35vh;
-    width: 57vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    line-height: 37px;
-}
-
-.close {
-    position: absolute;
-    top: 8px;
-    right: 12px;
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    cursor: pointer;
-}
-
-.used {
-    position: relative;
-}
-
-.used::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-}
-
-#titlePrize {
-    font-weight: 600;
-    font-size: 20px;
-}
-
-.icon-copy {
-    width: 20px;
-    height: 20px;
-}
-
-.icon-copy:after {
-    content: '';
-    display: inline-block;
-    width: 36px;
-    height: 36px;
-    background-image: url('./img/Copy2.svg');
-    background-size: 20px 20px;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    position: absolute;
-    right: 10%;
-    bottom: 23%;
-}
-
-.flex {
-    display: flex;
-}
-
-.items-center {
-    align-items: center;
-}
-
-.gap-3 {
-    gap: 8px;
-}
-
-.justify-center {
-    justify-content: center;
-}
-
-.copy-notify {
-    position: absolute;
-    bottom: 3%;
-    background-color: #333;
-    color: white;
-    border-radius: 5px;
-    font-size: 10px;
-    display: none;
-    width: 100px;
+  background-image: url("./img/12.svg");
 }
 
 .blue {
-    background-color: #ccecfb;
-    width: 108px;
-    height: 108px;
-    border-radius: 10px;
-    font-size: 23px;
-    line-height: 34px;
-    padding-left: 11px;
-    font-weight: 600;
+  background-image: url("./img/raffle.svg");
+  width: 114px;
+  height: 114px;
+  border-radius: 4px;
+  padding-left: 11px;
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px 30px;
+  border-radius: 12px;
+  text-align: center;
+  max-width: 300px;
+  position: relative;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  height: 35vh;
+  width: 57vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  line-height: 37px;
+}
+
+.close {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  cursor: pointer;
+}
+
+.used {
+  position: relative;
+}
+
+.used::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+#titlePrize {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.icon-copy {
+  width: 20px;
+  height: 20px;
+}
+
+.icon-copy:after {
+  content: "";
+  display: inline-block;
+  width: 36px;
+  height: 36px;
+  background-image: url("./img/Copy2.svg");
+  background-size: 20px 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  position: absolute;
+  right: 10%;
+  bottom: 20%;
+}
+
+.flex {
+  display: flex;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.gap-3 {
+  gap: 8px;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.copy-notify {
+  position: absolute;
+  bottom: 3%;
+  background-color: #333;
+  color: white;
+  border-radius: 5px;
+  font-size: 10px;
+  display: none;
+  width: 100px;
 }
 
 .day.disabled {
-    opacity: 0.4;
-    cursor: not-allowed;
-    pointer-events: none;
-    position: relative;
+  opacity: 46%;
+  cursor: not-allowed;
+  pointer-events: none;
+  position: relative;
 }
 
 .day.disabled::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 .faq-container {
-    width: calc(100% - 20px);
-    max-width: 946px;
-    margin-top: 40px;
-    padding: 20px;
-    background-color: #fffae6;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  width: calc(100% - 20px);
+  max-width: 946px;
+  margin-top: 40px;
+  padding: 20px;
+  background-color: #fffae6;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .faq-item {
-    border-bottom: 1px solid #ddd;
-    padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
 }
 
 .faq-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 600;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .faq-arrow {
-    transition: transform 1.1s ease-in-out;
-    display: inline-block;
-    font-size: 18px;
+  transition: transform 1.1s ease-in-out;
+  display: inline-block;
+  font-size: 18px;
 }
 
 .faq-answer {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.4s ease;
-    font-size: 16px;
-    line-height: 1.4;
-    padding-top: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease;
+  font-size: 16px;
+  line-height: 1.4;
+  padding-top: 0;
 }
 
 .faq-item.active .faq-answer {
-    max-height: 3000px;
-    padding-top: 10px;
-    line-height: 27px;
+  max-height: 3000px;
+  padding-top: 10px;
+  line-height: 27px;
 }
 
 .faq-item.active .faq-arrow {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .faq-question,
 .faq-answer {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 @media (max-width: 936px) {
-    .calendar {
-        justify-content: center;
-    }
-    .faq-question,
-    .faq-answer {
-        font-size: 13px;
-    }
-    .faq-container {
-        margin-top: 10px;
-    }
+  .calendar {
+    justify-content: center;
+  }
+  .faq-question,
+  .faq-answer {
+    font-size: 13px;
+  }
+  .faq-container {
+    margin-top: 10px;
+  }
+  .title {
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 15px;
+  }
 }
